--- a/my-style.css
+++ b/my-style.css
@@ -8,5 +8,12 @@ h1 {
   background: white;
   padding: 10px;
   margin: 10px;
-  
+}
+
+p{
+  color: chartreuse;
+  background-color: darkgrey;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px;
 }
